--- a/style/blog.css
+++ b/style/blog.css
@@ -1,4 +1,9 @@
-div{
-    background-color: rgb(14, 86, 0);
+.lk3{
+    background-color: rgb(172, 214, 255);
+    margin-top: 10px;
+    /* margin: 10px; */
     padding: 10px;
+}
+body{
+    background-color: rgb(147, 222, 82);
 }
