--- a/style/blog.css
+++ b/style/blog.css
@@ -1,9 +1,20 @@
-.lk3{
-    background-color: rgb(172, 214, 255);
-    margin-top: 10px;
-    /* margin: 10px; */
-    padding: 10px;
+.di{
+    background-color: rgb(255, 196, 0);
+     padding: 10px;
+     margin: 10px;
 }
-body{
-    background-color: rgb(147, 222, 82);
+li{
+    color: rgb(255, 174, 0);
+    font-size: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+    background-color: mediumturquoise;
+}
+h2{
+    text-align: center;
+    font-size: 30px;
+    color: rgb(255, 0, 0);
+    background-color: cadetblue;
+}
+p{
+    background-color: rgb(91, 161, 186);
 }
